Optimized the syntax of some environments.

--- a/Nostalgia.cls
+++ b/Nostalgia.cls
@@ -4,16 +4,12 @@
 \NeedsTeXFormat{LaTeX2e}
 
 \LoadClass{article}
-\RequirePackage[margin=1in,a4paper]{geometry}
+\RequirePackage[margin=1in, a4paper]{geometry}
 
 \RequirePackage{unicode-math}
 \RequirePackage{fontspec}
 \setmathfont{STIX Two Math}
 \RequirePackage{newtxtext}
-
-\RequirePackage{amsthm}
-\renewcommand{\proofname}{\textbf{Proof}}
-\renewcommand{\qedsymbol}{$\mdblksquare$}
 
 \RequirePackage[dvipsnames]{xcolor}
 \RequirePackage{tcolorbox}
@@ -25,18 +21,13 @@
 \setlength{\parskip}{3mm} 
 \setlength{\parindent}{2em}
 
-\RequirePackage[shortlabels,inline]{enumitem}
-\setlist{nolistsep}
-
-\newenvironment{steps}{\begin{enumerate}[label=\textbf{Step \arabic*}]}{\end{enumerate}}
-
 \RequirePackage{titlesec}
 \newcommand{\ruleafter}{\rule[2ex]{100mm}{1pt}}
 \titleformat{\section}{\normalfont\Large\bfseries\color{Cyan}}{\thesection}{1em}{}[\ruleafter]
 \titleformat*{\subsection}{\normalfont\large\bfseries\color{Cyan}}
 \titleformat*{\subsubsection}{\normalfont\normalsize\bfseries\color{Cyan}}
 
-\newtcbtheorem[number within=section]{theorem}{Theorem}{
+\newtcbtheorem[number within=section]{tcbTheorem}{Theorem}{
     enhanced,
     breakable,
     before skip=5mm, after skip=5mm,
@@ -53,7 +44,7 @@
     sharp corners=northwest
 }{the}
 
-\newtcbtheorem[number within=section]{lemma}{Lemma}{
+\newtcbtheorem[number within=section]{tcbLemma}{Lemma}{
     enhanced,
     before skip=5mm, after skip=5mm,
     arc=0.8mm, boxrule=1pt,
@@ -69,7 +60,7 @@
     sharp corners=northwest
 }{lem}
 
-\newtcbtheorem[number within=section]{corol}{Corollary}{
+\newtcbtheorem[number within=section]{tcbCorollary}{Corollary}{
     enhanced,
     before skip=5mm, after skip=5mm,
     arc=0.8mm, boxrule=1pt,
@@ -85,7 +76,7 @@
     sharp corners=northwest
 }{lem}
 
-\newtcbtheorem[number within=section]{definition}{Definition}{
+\newtcbtheorem[number within=section]{tcbDefinition}{Definition}{
     enhanced,
     before skip=5mm, after skip=5mm,
     colframe=Bittersweet!100!Yellow!20,
@@ -95,7 +86,7 @@
     boxrule=1pt
 }{def}
 
-\newtcbtheorem[number within=section]{remark}{Remark}{
+\newtcbtheorem[number within=section]{tcbRemark}{Remark}{
     enhanced,
     before skip=5mm, after skip=5mm,
     boxrule=0.4pt,
@@ -104,3 +95,19 @@
     sharp corners,
     drop fuzzy shadow
 }{rem}
+
+\RequirePackage{amsthm}
+\renewcommand{\proofname}{\textbf{Proof}}
+\renewcommand{\qedsymbol}{$\mdblksquare$}
+
+\RequirePackage{xparse}
+\NewDocumentEnvironment{theorem}{ O{} O{} }{\begin{tcbTheorem}{#1}{#2}}{\end{tcbTheorem}}
+\NewDocumentEnvironment{lemma}{ O{} O{} }{\begin{tcbLemma}{#1}{#2}}{\end{tcbLemma}}
+\NewDocumentEnvironment{corollary}{ O{} O{} }{\begin{tcbCorollary}{#1}{#2}}{\end{tcbCorollary}}
+\NewDocumentEnvironment{definition}{ O{} O{} }{\begin{tcbDefinition}{#1}{#2}}{\end{tcbDefinition}}
+\NewDocumentEnvironment{remark}{ O{} O{} }{\begin{tcbRemark}{#1}{#2}}{\end{tcbRemark}}
+
+\RequirePackage[shortlabels, inline]{enumitem}
+\setlist{nolistsep}
+\NewDocumentEnvironment{steps}{ O{Step} }{\begin{enumerate}[label=\textbf{#1 \arabic*}]}{\end{enumerate}}
+
